# smartpower-bridge-lite

./: .gitignore  CMakeLists.txt  README.md  build.sh
src/: CMakeLists.txt  hid_pnp.cpp  hid_pnp.h  main.cpp
